<resources>
    <!-- MainActivity -->

    <string name="betalning">Betalning för arbetsordern</string>
    <string name="onskadtimlon">Önskad Timlön</string>
    <string name="timer">Sätt Timer</string>
    <string name="timlon">%1$s kr/h</string>
    <string name="basbetalning">63.00</string>
    <string name="sampletimlon">146 kr/h</string>
    <string name="app_name">AckordRäknaren</string>
    <string name="eta">%1$s:%2$s</string>
    <string name="countdowner">%1$d</string>
    <string name="betalning_input">%1$d</string>
    <string name="todo">TODO</string>
    <string name="two_decimal_input">%1$s0</string>
    <string name="On_Finish">Finished</string>
    <string name="order_in_minutes">%1$s min</string>
    <string name="order_min_text">Tidsåtgång för arbetsorder</string>
    <string name="estimerad">Estimerad färdig klockslag</string>
    <string name="StopAndLog">Logga arbetsorder</string>
    <string name="settings">Inställningar</string>
    <string name="loggar">Arbetsordrar</string>


    <!-- Preference Titles -->
    <string name="header_one">Enable Night Mode</string>
    <string name="header_two">Select timeformat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>